경로테스트 끝

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -42,7 +42,7 @@
                 경로 관리
             </div>
         </a>
-        <a href="/admin/line/test" class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'edgeTest' ? 'link' : 'white'">
+        <a href="/admin/map/test" class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'edgeTest' ? 'link' : 'white'">
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-map-pin fs-4"></i>
             </div>
