--- a/src/main/resources/templates/event/event-detail.html
+++ b/src/main/resources/templates/event/event-detail.html
@@ -30,7 +30,7 @@
                                     </div>
                                     <div class="col-2 offset-10 text-center" style="padding-left : 5.8rem;">
                                         <a type="button" class="btn btn-danger"
-                                           th:onclick="|location.href='@{/admin/event/delete/{eventId}(eventId=${eventDto.getEventId()})}'|">
+                                           th:onclick="|location.href='@{/admin/event/delete/{eventId}(eventId=${eventDto.event.getEventId()})}'|">
                                             삭제</a>
 <!--                                        th:href="@{/admin/event/delete/{eventId}(eventId=${eventDto.getEventId()})}">   삭제</a>-->
                                     </div>
@@ -41,33 +41,33 @@
                                             <div class="form-floating mb-3">
                                                 <p class="fs-4 nodeHeader">행사 이름</p>
                                                 <hr>
-                                                <input th:field="*{eventName}" type="text" class="form-control fontHv mt-0 pt-0 fs-6">
+                                                <input th:field="*{event.eventName}" type="text" class="form-control fontHv mt-0 pt-0 fs-6">
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="col">
                                                 <p class="fs-4 nodeHeader">시작 날짜</p>
                                                 <hr>
-                                                <input th:field="*{eventStartDate}" type="date" class="form-control fontHv mt-0 pt-0 fs-6">
+                                                <input th:field="*{event.eventStartDate}" type="date" class="form-control fontHv mt-0 pt-0 fs-6">
                                             </div>
                                             <div class="col">
                                                 <p class="fs-4 nodeHeader">종료 날짜</p>
                                                 <hr>
-                                                <input th:field="*{eventEndDate}" type="date" class="form-control fontHv mt-0 pt-0 fs-6">
+                                                <input th:field="*{event.eventEndDate}" type="date" class="form-control fontHv mt-0 pt-0 fs-6">
                                             </div>
                                         </div>
                                         <div class="row mt-2">
                                             <div class="form-floating mb-3">
                                                 <p class="fs-4 nodeHeader">행사 설명 멘트</p>
                                                 <hr>
-                                                <textarea th:field="*{eventInfo}" class="form-control fontHv mt-0 pt-0 fs-6"></textarea>
+                                                <textarea th:field="*{event.eventInfo}" class="form-control fontHv mt-0 pt-0 fs-6"></textarea>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="form-floating mb-3">
                                                 <p class="fs-4 nodeHeader">행사 URL</p>
                                                 <hr>
-                                                <input th:field="*{eventLink}" type="text" class="form-control fontHv mt-0 pt-0 fs-6">
+                                                <input th:field="*{event.eventLink}" type="text" class="form-control fontHv mt-0 pt-0 fs-6">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -112,23 +112,23 @@
                                                         </tr>
                                                         </thead>
                                                         <tbody class="text-center" id="locations">
-                                                        <tr th:each="location : ${eventLocationList}" class="locationData">
+                                                        <tr th:each="location : ${eventDto.locations}" class="locationData">
                                                             <td>
-                                                                <input type="hidden" class="form-control sidebarItem" th:value="${location.eventLocationId}">
+                                                                <input type="hidden" class="form-control sidebarItem" th:field="${location.eventLocationId}">
 
                                                                 <input type="checkbox" style="width : 1.5rem; height : 1.5rem;" class="mt-1 checkBoxList">
                                                             </td>
                                                             <td>
-                                                                <input type="text" class="form-control sidebarItem" th:value="${location.eventPlaceName}">
+                                                                <input type="text" class="form-control sidebarItem" th:field="${location.eventPlaceName}">
                                                             </td>
                                                             <td>
-                                                                <input type="text" class="form-control sidebarItem" th:value="${location.eventAltitude}">
+                                                                <input type="text" class="form-control sidebarItem" th:field="${location.eventAltitude}">
                                                             </td>
                                                             <td>
-                                                                <input type="text" class="form-control sidebarItem" th:value="${location.eventLatitude}">
+                                                                <input type="text" class="form-control sidebarItem" th:field="${location.eventLatitude}">
                                                             </td>
                                                             <td>
-                                                                <input type="text" class="form-control sidebarItem" th:value="${location.eventLongitude}">
+                                                                <input type="text" class="form-control sidebarItem" th:field="${location.eventLongitude}">
                                                             </td>
                                                         </tr>
                                                         </tbody>
@@ -139,10 +139,10 @@
                                     </div>
                                     <div class="col text-center mt-3">
                                         <div class="image-wrapper">
-                                            <img id="preview" th:src="${eventDto.eventImagePath}" style="height:40rem; width:28rem">
+                                            <img id="preview" th:src="${eventDto.event.getEventImagePath}" style="height:40rem; width:28rem">
                                         </div>
                                         <div class="mt-3">
-                                            <input id="filename" class="p-2" th:value="${eventDto.eventImageName}" placeholder="첨부파일" style="border: 1px solid #dddddd; width: 78%; color: #999999; pointer-events: none;">
+                                            <input id="filename" class="p-2" th:field="${eventDto.event.eventImageName}" placeholder="첨부파일" style="border: 1px solid #dddddd; width: 78%; color: #999999; pointer-events: none;">
                                             <label class="p-2 mb-1 sidebarItem" for="file" style="color: #fff; vertical-align: middle; cursor: pointer; background-color: #999999;">파일찾기</label>
                                             <input name="file" type="file" accept="image/*" id="file" style="visibility: hidden">
                                         </div>
